# webxr-mesh-exporter

./: .gitignore  DEPLOYMENT_SUMMARY.md  README.md  UrdfExporter.js  client.js  index.html  index.md  json_to_urdf.py  package-lock.json  package.json  server.js  style.css
apache/: webxr-mesh-exporter-domain.conf  webxr-mesh-exporter.conf
config/: .env.example  ecosystem.config.js
docs/: README.md  UBUNTU_DEPLOYMENT.md
export/urdf/webxr_robotOo_2025-06-28T19-20-25-753Z/: CMakeLists.txt  package.xml
export/urdf/webxr_robotOo_2025-06-28T19-20-25-753Z/urdf/: webxr_robotOo.urdf
export/urdf/webxr_robot_2025-06-28T18-37-06-396Z/: CMakeLists.txt  package.xml
nginx/: webxr-mesh-exporter.conf
scripts/: diagnose.sh  fix-nginx-config.sh  lightsail-setup.sh  pm2-manage.sh  setup-dns.sh  test-deployment.sh  ubuntu-setup.sh  ubuntu-update.sh  update.sh
src/: client.js  server.js
src/public/: index.html  mr.html  style.css
tools/: convert_to_urdf.sh
